[add]media query

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
             <img src="./me.jpeg" id="profile-image">
         </div>
 
-        <div id="name"><h1>DEERAJ ESVAR R</h1></div>
+        <div id="name"><h1>
+            <span>D</span><span>EERAJ ESVAR</span><span>R</span>
+        </h1></div>
 
         <hr>
 
