--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
 
         <div id="name"><h1>
-            <span>D</span><span>EERAJ ESVAR</span><span>R</span>
+            DEERAJ ESVAR
         </h1></div>
 
         <hr>
