--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         Deeraj Esvar R
     </title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <link rel="shortcut icon" type="image/png" href="./favicon.png"/>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -25,22 +27,22 @@
         <hr>
 
         <div id="desc">
-            <h5>
-                Hola! I'm Deeraj, an enthusiastic programmer with interests in Development and Cybersecurity.
-            </h5>
-            <br>
-            <h5>
-                I'm currently pursuing my B.Tech at NIT Trichy. I'm eager to work on Open source projects, and
-                startups!
-                Check out my resume below.
-            </h5>
+
+            Hola! I'm Deeraj, an enthusiastic programmer with interests in Development and Cybersecurity.
+
+            <br><br>
+
+            I'm currently pursuing my B.Tech at NIT Trichy. I'm eager to work on Open source projects, and
+            startups!
+            Check out my resume below.
+
         </div>
 
         <br>
 
         <div id="link-icons">
               <span class="github">
-                <a class="link" href="/DeerajEsvar.pdf">
+                <a class="link" href="./DeerajEsvar.pdf">
                   <i class="fa fa-3x fa-file-text"></i>
                 </a>
               </span>
