--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <div class="main-card" id="main-card">
     <div id="main-content">
         <div id="profile-container">
-            <img src="./me.jpeg" id="profile-image">
+            <img src="./me1.jpeg" id="profile-image">
         </div>
 
         <div id="name"><h1>
@@ -28,12 +28,11 @@
 
         <div id="desc">
 
-            Hola! I'm Deeraj, an enthusiastic programmer with interests in Development and Cybersecurity.
+            Hola! I'm Deeraj, an enthusiastic programmer with interests in Full Stack Development, Devops and Security. I interned at Morgan Stanley, and was also part of GSoC'19
 
             <br><br>
 
-            I'm currently pursuing my B.Tech at NIT Trichy. I'm eager to work on Open source projects, and
-            startups!
+            I'm currently pursuing my B.Tech Final year at NIT Trichy. Always excited to develop anything that helps to solve real world problems.
             Check out my resume below.
 
         </div>
